// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolIconFc should render correctly 1`] = `
<span class="kol-icon">
  <i aria-label="test" class="kol-icon__icon test" part="icon" role="img"></i>
</span>
`;

exports[`KolIconFc should render with the correct class 1`] = `
<span class="kol-icon test-class">
  <i aria-label="test" class="kol-icon__icon test" part="icon" role="img"></i>
</span>
`;

exports[`KolIconFc should render with the correct icons and label 1`] = `
<span class="kol-icon">
  <i aria-label="test-label" class="kol-icon__icon test-icons" part="icon" role="img"></i>
</span>
`;

exports[`KolIconFc should render with the correct style 1`] = `
<span class="kol-icon" style="color: red;">
  <i aria-label="test" class="kol-icon__icon test" part="icon" role="img"></i>
</span>
`;
